# banbot

./: .gitignore  README.MD  pyproject.toml
src/: main.py  store.py
